--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ requests==2.22.0
 urllib3==1.25.6
 Werkzeug==0.16.0
 WTForms==2.2.1
+Flask-SQLAlchemy==2.4.1
+Flask-Bootstrap==3.3.7.1
+flask-nav-0.6
