--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ Flask-SQLAlchemy==2.4.1
 Flask-Bootstrap==3.3.7.1
 Flask-Nav==0.6
 Flask-Login==0.4.1
+alembic==1.3.1
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+psycopg2== 2.8.4
